# shrink-morph

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dependencies.md  LocalGlobalSolver.cpp  README.md  constants.h  functions.cpp  newton.h  path_extraction.h  stretch_angles.cpp  test2.gcode  varying_heights.py
.github/workflows/: build.yml  cmake-multi-platform.yml
app/: CMakeLists.txt  cli.cpp  generate_trajectories.cpp  generate_trajectories.h  main.cpp  save.cpp  save.h
cmake/: FindSuiteSparse.cmake
data/: plot-layer.py
gcode/: togcode.py
lib/: CMakeLists.txt  LocalGlobalSolver.cpp  functions.cpp  newton.cpp  newton.h  parameterization.cpp  path_extraction.cpp  path_extraction.h  simulation_utils.cpp  stretch_angles.h  stripe_patterns.h
python/: CMakeLists.txt  main.py  requirements.txt  shrink_morph.cpp  varying_heights.py
src/: LocalGlobalSolver.cpp  LocalGlobalSolver.h  cli.cpp  constants.h  functions.cpp  functions.h  main.cpp  newton.cpp  newton.h  parameterization.cpp  parameterization.h  path_extraction.cpp  simulation_utils.cpp  simulation_utils.h  solvers.h  stretch_angles.h  stripe_patterns.cpp  stripe_patterns.h  testbench.lua  timer.h
togcode/: togcode.py
togcode/printers/CR10S_Pro/: features.lua
togcode/printers/Creality_K1_Max/: features.lua  footer.gcode  header.gcode
togcode/printers/Prusa_MK3S/: features.lua
togcode/printers/Ultimaker2/: features.lua  footer.gcode  header.gcode
togcode/printers/Ultimaker3/: features.lua  header.gcode
togcode/printers/UltimakerS3/: features.lua  header.gcode
togcode/printers/UltimakerS5/: features.lua  header.gcode
